--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-md-8 text-center"> 
-                                <h5>Welcome to NoStop</h5>
+                                <h5>Welcome to Fit Club 962</h5>
                                 <h1>Be A Happier, Healthier,<br><span>Stronger You</span></h1>
                                 <p>Achieve your health &amp; fitness goals at any stage.</p>
                                 <a href="#" class="btn-1 button-1">Our Classes</a>
